Fixed RSVP and added visit fake

--- a/src/partials/access.html
+++ b/src/partials/access.html
@@ -8,7 +8,7 @@
 
                     <div class="col-xs-12 title">
 
-                        <div class="svg-icon">
+                        <div class="svg-icon hidden-xs">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" data-original-aspect-ratio="0.44607836464102285" style="width: 45px; height: 100px;">
                                 <g transform="translate(-75.68625940808106,-48.039208)">
                                     <path
@@ -43,6 +43,8 @@
                                             d="M70.758956 32.60177h-9.749842h-0.812657H38.25921H35.00899H13.071743h-0.812657h-3.249811H4.134149c-0.894988 0,-1.624905 0.727051,-1.624905 1.624907v13.000075c0 0.898266,0.729917 1.624907,1.624905 1.624907h3.249811c0 -6.271477,5.103686 -11.375168,11.375157 -11.375168c6.271062 0,11.375157 5.103691,11.375157 11.375168h22.749904c0 -6.271477,5.103686 -11.375168,11.375157 -11.375168c6.271062 0,11.375157 5.103691,11.375157 11.375168h3.249811c0.901132 0,1.624905 -0.726641,1.624905 -1.624907v-1.624907C80.509207 34.855423,75.208911 32.60177,70.758956 32.60177z"></path>
                                 </g>
                             </svg>
+
+                            <!-- VESPA -->
 
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 462.979 462.979" style="width: 100px; height: 50px;">
                                 <g>
