--- a/src/partials/accommodation.html
+++ b/src/partials/accommodation.html
@@ -10,7 +10,7 @@
                     <div class="col-xs-12 col-sm-9">
 
                         <div class="title">
-                            <div class="svg-icon">
+                            <div class="svg-icon hidden-xs">
                                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" data-original-aspect-ratio="0.44607836464102285" style="width: 45px; height: 100px;">
                                     <g transform="translate(-75.68625940808106,-48.039208)">
                                         <path
@@ -96,10 +96,8 @@
                             <div class="col-xs-12 col-sm-6 hotels">
 
                                 <div class="hotel">
-                                    <div class="hotel-title">
-                                        <span>Hotel Park</span>
-                                        <span>{{> ic_star}}{{> ic_star}}{{> ic_star}}</span>
-                                    </div>
+                                    <div class="hotel-title">Hotel Park</div>
+                                    <div>{{> ic_star}}{{> ic_star}}{{> ic_star}}</div>
                                     <div class="hotel-site"><a href="http://www.hotelparkcastiglioncello.it" target="_blank">www.hotelparkcastiglioncello.it</a></div>
                                     <div class="hotel-links">
                                         <a class="tripadvisor"
@@ -112,10 +110,8 @@
                                 </div>
 
                                 <div class="hotel">
-                                    <div class="hotel-title">
-                                        <span>Hotel Leopoldo</span>
-                                        <span>{{> ic_star}}{{> ic_star}}{{> ic_star}}</span>
-                                    </div>
+                                    <div class="hotel-title">Hotel Leopoldo</div>
+                                    <div>{{> ic_star}}{{> ic_star}}{{> ic_star}}</div>
                                     <div class="hotel-site"><a href="http://www.hotelleopoldo.it" target="_blank">www.hotelleopoldo.it</a></div>
                                     <div class="hotel-links">
                                         <a class="tripadvisor"
@@ -128,10 +124,8 @@
                                 </div>
 
                                 <div class="hotel">
-                                    <div class="hotel-title">
-                                        <span>Hotel Miramare</span>
-                                        <span>{{> ic_star}}{{> ic_star}}{{> ic_star}}</span>
-                                    </div>
+                                    <div class="hotel-title">Hotel Miramare</div>
+                                    <div>{{> ic_star}}{{> ic_star}}{{> ic_star}}</div>
                                     <div class="hotel-site"><a href="http://www.albergo-miramare.it" target="_blank">www.albergo-miramare.it</a></div>
                                     <div class="hotel-links">
                                         <a class="tripadvisor"
@@ -144,10 +138,8 @@
                                 </div>
 
                                 <div class="hotel">
-                                    <div class="hotel-title">
-                                        <span>Hotel Guerrini</span>
-                                        <span>{{> ic_star}}{{> ic_star}}</span>
-                                    </div>
+                                    <div class="hotel-title">Hotel Guerrini</div>
+                                    <div>{{> ic_star}}{{> ic_star}}</div>
                                     <div class="hotel-site"><a href="http://www.guerrinihotel.it" target="_blank">www.guerrinihotel.it</a></div>
                                     <div class="hotel-links">
                                         <a class="tripadvisor"
@@ -160,10 +152,8 @@
                                 </div>
 
                                 <div class="hotel">
-                                    <div class="hotel-title">
-                                        <span>Hotel Corallo</span>
-                                        <span>{{> ic_star}}{{> ic_star}}</span>
-                                    </div>
+                                    <div class="hotel-title">Hotel Corallo</div>
+                                    <div>{{> ic_star}}{{> ic_star}}</div>
                                     <div class="hotel-links">
                                         <a class="tripadvisor"
                                            href="https://www.tripadvisor.com/Hotel_Review-g666540-d1144334-Reviews-Hotel_Corallo-Castiglioncello_Rosignano_Marittimo_Province_of_Livorno_Tuscany.html"
@@ -178,10 +168,8 @@
                             <div class="col-xs-12 col-sm-6 hotels">
 
                                 <div class="hotel">
-                                    <div class="hotel-title">
-                                        <span>Hotel Villa Martini</span>
-                                        <span>{{> ic_star}}{{> ic_star}}{{> ic_star}}{{> ic_star}}</span>
-                                    </div>
+                                    <div class="hotel-title">Hotel Villa Martini</div>
+                                    <div>{{> ic_star}}{{> ic_star}}{{> ic_star}}{{> ic_star}}</div>
                                     <div class="hotel-site"><a href="http://www.villamartini.it" target="_blank">www.villamartini.it</a></div>
                                     <div class="hotel-links">
                                         <a class="tripadvisor"
@@ -194,10 +182,8 @@
                                 </div>
 
                                 <div class="hotel">
-                                    <div class="hotel-title">
-                                        <span>Hotel Atlantico</span>
-                                        <span>{{> ic_star}}{{> ic_star}}{{> ic_star}}</span>
-                                    </div>
+                                    <div class="hotel-title">Hotel Atlantico</div>
+                                    <div>{{> ic_star}}{{> ic_star}}{{> ic_star}}</div>
                                     <div class="hotel-site"><a href="http://www.hotelatlantico.it" target="_blank">www.hotelatlantico.it</a></div>
                                     <div class="hotel-links">
                                         <a class="tripadvisor"
@@ -210,10 +196,8 @@
                                 </div>
 
                                 <div class="hotel">
-                                    <div class="hotel-title">
-                                        <span>Hotel Tirreno</span>
-                                        <span>{{> ic_star}}{{> ic_star}}{{> ic_star}}</span>
-                                    </div>
+                                    <div class="hotel-title">Hotel Tirreno</div>
+                                    <div>{{> ic_star}}{{> ic_star}}{{> ic_star}}</div>
                                     <div class="hotel-site"><a href="http://www.hotel-tirreno.com" target="_blank">www.hotel-tirreno.com</a></div>
                                     <div class="hotel-links">
                                         <a class="tripadvisor"
@@ -226,9 +210,7 @@
                                 </div>
 
                                 <div class="hotel">
-                                    <div class="hotel-title">
-                                        <span>Albergo Pensione Bartoli</span>
-                                    </div>
+                                    <div class="hotel-title">Albergo Pensione Bartoli</div>
                                     <div class="hotel-site"><a href="http://www.albergobartoli.com" target="_blank">www.albergobartoli.com</a></div>
                                     <div class="hotel-links">
                                         <a class="tripadvisor"
