--- a/src/partials/info.html
+++ b/src/partials/info.html
@@ -7,7 +7,7 @@
                 <div class="row">
 
                     <div class="col-xs-12 title">
-                        <div class="svg-icon">
+                        <div class="svg-icon hidden-xs">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" data-original-aspect-ratio="0.44607836464102285" style="width: 45px; height: 100px;">
                                 <g transform="translate(-75.68625940808106,-48.039208)">
                                     <path
