--- a/github-prod/css/main.css
+++ b/github-prod/css/main.css
@@ -3190,7 +3190,9 @@ http://flickity.metafizzy.co
 .flickity-enabled{position:relative}.flickity-enabled:focus{outline:0}.flickity-viewport{overflow:hidden;position:relative;height:100%}.flickity-slider{position:absolute;width:100%;height:100%}.flickity-enabled.is-draggable{-webkit-tap-highlight-color:transparent;tap-highlight-color:transparent;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.flickity-enabled.is-draggable .flickity-viewport{cursor:move;cursor:-webkit-grab;cursor:grab}.flickity-enabled.is-draggable .flickity-viewport.is-pointer-down{cursor:-webkit-grabbing;cursor:grabbing}.flickity-prev-next-button{position:absolute;top:50%;width:44px;height:44px;border:none;border-radius:50%;background:#fff;background:hsla(0,0%,100%,.75);cursor:pointer;-webkit-transform:translateY(-50%);-ms-transform:translateY(-50%);transform:translateY(-50%)}.flickity-prev-next-button:hover{background:#fff}.flickity-prev-next-button:focus{outline:0;box-shadow:0 0 0 5px #09F}.flickity-prev-next-button:active{filter:alpha(opacity=60);opacity:.6}.flickity-prev-next-button.previous{left:10px}.flickity-prev-next-button.next{right:10px}.flickity-rtl .flickity-prev-next-button.previous{left:auto;right:10px}.flickity-rtl .flickity-prev-next-button.next{right:auto;left:10px}.flickity-prev-next-button:disabled{filter:alpha(opacity=30);opacity:.3;cursor:auto}.flickity-prev-next-button svg{position:absolute;left:20%;top:20%;width:60%;height:60%}.flickity-prev-next-button .arrow{fill:#333}.flickity-prev-next-button.no-svg{color:#333;font-size:26px}.flickity-page-dots{position:absolute;width:100%;bottom:-25px;padding:0;margin:0;list-style:none;text-align:center;line-height:1}.flickity-rtl .flickity-page-dots{direction:rtl}.flickity-page-dots .dot{display:inline-block;width:10px;height:10px;margin:0 8px;background:#333;border-radius:50%;filter:alpha(opacity=25);opacity:.25;cursor:pointer}.flickity-page-dots .dot.is-selected{filter:alpha(opacity=100);opacity:1}
 @media (max-width: 767px) {
   .title span, .title span.title1, .title span.title2 {
-    font-size: 3em; } }
+    padding-top: 0 !important;
+    padding-left: 0 !important;
+    font-size: 2.5em; } }
 @media (min-width: 768px) {
   .title span, .title span.title1, .title span.title2 {
     font-size: 5em; } }
@@ -3261,6 +3263,12 @@ header {
         color: #234070;
         letter-spacing: 2px;
         font-weight: 700; }
+      @media (max-width: 767px) {
+        header .svg-bg-date div span {
+          position: relative;
+          top: 0;
+          left: 0;
+          color: #FFFFFF; } }
       header .svg-bg-date div svg {
         fill: #FFFFFF; }
   header .svg-icon-right {
@@ -3370,22 +3378,22 @@ header {
     margin-bottom: 10px; }
 
 #accommodation {
-  color: #FFFFFF;
-  background: #234070 url("../images/bg_accomodation.jpg") no-repeat fixed center center;
+  color: #234070;
+  background: #FFFFFF url("../images/bg_accomodation.jpg") no-repeat fixed center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   padding: 0; }
   #accommodation a {
-    color: #FFFFFF; }
+    color: #234070; }
     #accommodation a .hover {
-      color: #FFFFFF; }
+      color: #234070; }
   #accommodation .title .svg-icon {
     float: left;
     transform: rotate(234deg) translateZ(0); }
     #accommodation .title .svg-icon svg {
-      fill: #FFFFFF; }
+      fill: #234070; }
   #accommodation .title span {
     font-weight: bold;
     line-height: 1em;
@@ -3403,7 +3411,7 @@ header {
       margin-top: 25px;
       margin-bottom: 25px; }
   #accommodation .hotels {
-    color: #FFFFFF; }
+    color: #234070; }
     #accommodation .hotels a {
       font-style: italic; }
     #accommodation .hotels .hotel {
@@ -3413,11 +3421,31 @@ header {
       #accommodation .hotels .hotel .hotel-title {
         font-family: "Sacramento", cursive, "Helvetica", sans-serif;
         font-size: 2.4em;
-        color: #FFFFFF; }
+        color: #234070; }
       #accommodation .hotels .hotel .hotel-links {
         margin-top: 5px; }
         #accommodation .hotels .hotel .hotel-links a.trivago {
           margin-left: 10px; }
+
+#visit {
+  color: #234070;
+  background: #FFFFFF url("../images/bg_visit.jpg") no-repeat fixed center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding: 0; }
+  #visit .title .svg-icon {
+    float: left;
+    transform: rotate(234deg) translateZ(0); }
+    #visit .title .svg-icon svg {
+      fill: #234070; }
+  #visit .title span {
+    font-weight: bold;
+    line-height: 1em;
+    padding-top: 75px;
+    padding-left: 40px;
+    display: block; }
 
 #page-map .menu-popover {
   position: absolute;
@@ -3454,7 +3482,7 @@ header {
   font-size: 50px;
   text-align: center; }
 
-#rsvp {
+#iframe-rsvp {
   position: absolute;
   top: 70px;
   left: 0;
