Add content for the page visitare

--- a/github-prod/css/main.css
+++ b/github-prod/css/main.css
@@ -3259,7 +3259,7 @@ header {
         top: 10px;
         left: 100px;
         font-family: "Sacramento", cursive, "Helvetica", sans-serif;
-        font-size: 2.4em;
+        font-size: 2.5em;
         color: #234070;
         letter-spacing: 2px;
         font-weight: 700; }
@@ -3314,7 +3314,7 @@ header {
       margin-right: 20px; }
     #info .col-left .col-title .subtitle, #info .col-right .col-title .subtitle {
       font-family: "Sacramento", cursive, "Helvetica", sans-serif;
-      font-size: 2.4em; }
+      font-size: 2.5em; }
   #info .col-left {
     color: #234070; }
     #info .col-left svg {
@@ -3374,7 +3374,7 @@ header {
     fill: #EBC52A; }
   #access .col-title {
     font-family: "Sacramento", cursive, "Helvetica", sans-serif;
-    font-size: 2.4em;
+    font-size: 2.5em;
     margin-bottom: 10px; }
 
 #accommodation {
@@ -3403,7 +3403,7 @@ header {
   #accommodation .col-title {
     text-align: center;
     font-family: "Sacramento", cursive, "Helvetica", sans-serif;
-    font-size: 2.4em; }
+    font-size: 2.5em; }
   #accommodation .websites {
     margin-top: 25px;
     margin-bottom: 50px; }
@@ -3420,7 +3420,7 @@ header {
         fill: #EBC52A; }
       #accommodation .hotels .hotel .hotel-title {
         font-family: "Sacramento", cursive, "Helvetica", sans-serif;
-        font-size: 2.4em;
+        font-size: 2.5em;
         color: #234070; }
       #accommodation .hotels .hotel .hotel-links {
         margin-top: 5px; }
@@ -3446,6 +3446,14 @@ header {
     padding-top: 75px;
     padding-left: 40px;
     display: block; }
+  #visit .col-title {
+    font-family: "Sacramento", cursive, "Helvetica", sans-serif;
+    font-size: 2.5em;
+    margin-bottom: 50px; }
+  #visit h3 {
+    font-family: "Sacramento", cursive, "Helvetica", sans-serif;
+    font-size: 1.9em;
+    font-weight: 700; }
 
 #page-map .menu-popover {
   position: absolute;
@@ -3524,7 +3532,8 @@ section .container {
   padding-top: 80px;
   padding-bottom: 80px; }
 section .title {
-  margin-bottom: 70px; }
+  margin-bottom: 70px;
+  word-wrap: break-word; }
 
 .box-shadow {
   display: block;
