--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,7 +9,8 @@ $color-light-blue: #234070;
 $color-green: #8FC9B8;
 $color-yellow: #EBC52A;
 
-$font-size-col-title: 2.4em;
+$font-size-col-title: 2.5em;
+$font-size-col-subtitle: 1.9em;
 $font-size-text: 1.6em;
 
 $media-xs-max-width: 767px;
@@ -37,6 +38,7 @@ $margin-large: 50px;
 $margin-medium: 25px;
 $margin-small: 10px;
 $margin-after-section-title: 70px;
+
 
 // bootstrap override
 .navbar {
