--- a/src/styles/_visit.scss
+++ b/src/styles/_visit.scss
@@ -34,6 +34,10 @@
     margin-bottom: $margin-large;
   }
 
+  .col-description {
+    margin-bottom: $margin-large;
+  }
+
   h3 {
     font-family: $font-sacramento;
     font-size: $font-size-col-subtitle;
