Added honeymoon section

--- a/src/styles/_info.scss
+++ b/src/styles/_info.scss
@@ -33,7 +33,8 @@
   .col-left, .col-right {
 
     .col-title {
-      margin-bottom: $margin-large;
+      margin-top: $margin-medium;
+      margin-bottom: $margin-small;
 
       .icon {
         margin-right: 20px;
