--- a/github-prod/css/main.css
+++ b/github-prod/css/main.css
@@ -1,12 +1,12 @@
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
- * Copyright 2011-2016 Twitter, Inc.
+ * Copyright 2011-2017 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=b7a47af2c93d7ca364265922d8eb2297)
- * Config saved to config.json and https://gist.github.com/b7a47af2c93d7ca364265922d8eb2297
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=a0136a1e9822ce39b9708fd8a1e70cc9)
+ * Config saved to config.json and https://gist.github.com/a0136a1e9822ce39b9708fd8a1e70cc9
  */
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
@@ -2659,6 +2659,129 @@ fieldset[disabled] .navbar-inverse .btn-link:hover,
 fieldset[disabled] .navbar-inverse .btn-link:focus {
   color: #444444;
 }
+.modal-open {
+  overflow: hidden;
+}
+.modal {
+  display: none;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1050;
+  -webkit-overflow-scrolling: touch;
+  outline: 0;
+}
+.modal.fade .modal-dialog {
+  -webkit-transform: translate(0, -25%);
+  -ms-transform: translate(0, -25%);
+  -o-transform: translate(0, -25%);
+  transform: translate(0, -25%);
+  -webkit-transition: -webkit-transform 0.3s ease-out;
+  -o-transition: -o-transform 0.3s ease-out;
+  transition: transform 0.3s ease-out;
+}
+.modal.in .modal-dialog {
+  -webkit-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+.modal-open .modal {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.modal-dialog {
+  position: relative;
+  width: auto;
+  margin: 10px;
+}
+.modal-content {
+  position: relative;
+  background-color: #ffffff;
+  border: 1px solid #999999;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+  -webkit-background-clip: padding-box;
+          background-clip: padding-box;
+  outline: 0;
+}
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1040;
+  background-color: #000000;
+}
+.modal-backdrop.fade {
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+.modal-backdrop.in {
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+}
+.modal-header {
+  padding: 15px;
+  border-bottom: 1px solid #e5e5e5;
+}
+.modal-header .close {
+  margin-top: -2px;
+}
+.modal-title {
+  margin: 0;
+  line-height: 1.42857143;
+}
+.modal-body {
+  position: relative;
+  padding: 15px;
+}
+.modal-footer {
+  padding: 15px;
+  text-align: right;
+  border-top: 1px solid #e5e5e5;
+}
+.modal-footer .btn + .btn {
+  margin-left: 5px;
+  margin-bottom: 0;
+}
+.modal-footer .btn-group .btn + .btn {
+  margin-left: -1px;
+}
+.modal-footer .btn-block + .btn-block {
+  margin-left: 0;
+}
+.modal-scrollbar-measure {
+  position: absolute;
+  top: -9999px;
+  width: 50px;
+  height: 50px;
+  overflow: scroll;
+}
+@media (min-width: 768px) {
+  .modal-dialog {
+    width: 600px;
+    margin: 30px auto;
+  }
+  .modal-content {
+    -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  }
+  .modal-sm {
+    width: 300px;
+  }
+}
+@media (min-width: 992px) {
+  .modal-lg {
+    width: 900px;
+  }
+}
 .tooltip {
   position: absolute;
   z-index: 1070;
@@ -2924,7 +3047,11 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .navbar-header:before,
 .navbar-header:after,
 .navbar-collapse:before,
-.navbar-collapse:after {
+.navbar-collapse:after,
+.modal-header:before,
+.modal-header:after,
+.modal-footer:before,
+.modal-footer:after {
   content: " ";
   display: table;
 }
@@ -2937,7 +3064,9 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .nav:after,
 .navbar:after,
 .navbar-header:after,
-.navbar-collapse:after {
+.navbar-collapse:after,
+.modal-header:after,
+.modal-footer:after {
   clear: both;
 }
 .center-block {
@@ -3205,6 +3334,10 @@ http://flickity.metafizzy.co
 p {
   margin: 0 0 25px; }
 
+#home-footer {
+  background-color: rgba(255, 255, 255, 0.85);
+  padding-bottom: 50px; }
+
 nav {
   font-family: "Sacramento", cursive, "Helvetica", sans-serif;
   font-size: 27px; }
@@ -3309,7 +3442,8 @@ header {
     padding-left: 40px;
     display: block; }
   #info .col-left .col-title, #info .col-right .col-title {
-    margin-bottom: 50px; }
+    margin-top: 25px;
+    margin-bottom: 10px; }
     #info .col-left .col-title .icon, #info .col-right .col-title .icon {
       margin-right: 20px; }
     #info .col-left .col-title .subtitle, #info .col-right .col-title .subtitle {
@@ -3324,10 +3458,45 @@ header {
     #info .col-right svg {
       fill: #8FC9B8; }
 
+#trip {
+  background-color: #CCC;
+  position: relative; }
+  #trip .earth {
+    position: relative;
+    width: 100%;
+    height: auto;
+    opacity: 0.7; }
+  #trip .dashed-line {
+    position: absolute;
+    animation: dash 6s linear forwards; }
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0; } }
+  #trip .modal {
+    position: absolute !important;
+    opacity: 0.8; }
+    #trip .modal .modal-header .modal-title {
+      color: #234070; }
+    #trip .modal .modal-body {
+      overflow-y: auto; }
+      #trip .modal .modal-body p {
+        color: #234070; }
+      #trip .modal .modal-body img {
+        opacity: 1 !important;
+        -webkit-box-shadow: 2px 2px 10px 2px #aaaaaa;
+        -moz-box-shadow: 2px 2px 10px 2px #aaaaaa;
+        box-shadow: 2px 2px 10px 2px #aaaaaa; }
+  #trip .modal-backdrop {
+    position: absolute !important;
+    opacity: 0.2 !important; }
+
 #carousel {
   width: 100%;
   padding-bottom: 65%;
-  margin: 0;
+  margin: 50px 0 0 0;
+  -webkit-box-shadow: 2px 2px 10px 2px #aaaaaa;
+  -moz-box-shadow: 2px 2px 10px 2px #aaaaaa;
+  box-shadow: 2px 2px 10px 2px #aaaaaa;
   /* position dots in carousel */
   /* white circles */
   /* fill-in selected dot */ }
