--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -1,7 +1,11 @@
 #carousel {
   width: 100%;
   padding-bottom: 65%;
-  margin: 0;
+  margin: $margin-large 0 0 0;
+
+  -webkit-box-shadow: 2px 2px 10px 2px rgba(170,170,170,1);
+  -moz-box-shadow: 2px 2px 10px 2px rgba(170,170,170,1);
+  box-shadow: 2px 2px 10px 2px rgba(170,170,170,1);
 
   .flickity-viewport {
     position: absolute;
