Fixed bugs with svg animations

--- a/github-prod/css/main.css
+++ b/github-prod/css/main.css
@@ -3468,15 +3468,15 @@ header {
     opacity: 0.7; }
   #trip .dashed-line {
     position: absolute;
-    animation: dash 6s linear forwards; }
-@keyframes dash {
-  to {
-    stroke-dashoffset: 0; } }
+    stroke-dasharray: 687px;
+    stroke-dashoffset: 687px; }
+    #trip .dashed-line.dashed-line-animation {
+      -webkit-animation: dash 3s linear forwards;
+      -moz-animation: dash 3s linear forwards;
+      animation: dash 3s linear forwards; }
   #trip .modal {
     position: absolute !important;
     opacity: 0.8; }
-    #trip .modal .modal-header .modal-title {
-      color: #234070; }
     #trip .modal .modal-body {
       overflow-y: auto; }
       #trip .modal .modal-body p {
@@ -3490,6 +3490,9 @@ header {
     position: absolute !important;
     opacity: 0.2 !important; }
 
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0; } }
 #carousel {
   width: 100%;
   padding-bottom: 65%;
@@ -3623,7 +3626,7 @@ header {
     margin-bottom: 50px; }
   #visit h3 {
     font-family: "Sacramento", cursive, "Helvetica", sans-serif;
-    font-size: 1.9em;
+    font-size: 2em;
     font-weight: 700; }
 
 #page-map .menu-popover {
@@ -3675,7 +3678,7 @@ body {
   -o-background-size: cover;
   background-size: cover;
   font-family: "Raleway", sans-serif;
-  font-size: 1.6em;
+  font-size: 1.7em;
   margin: 0;
   padding-top: 70px; }
 
