--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -12,13 +12,26 @@
         <div class="collapse navbar-collapse" id="main-navbar-collapse">
 
             <ul class="nav navbar-nav">
-                <li><a href="#/home" class="text-capitalize" data-i18n="nav.home"></a></li>
-                <li><a href="#/info" class="text-capitalize" data-i18n="nav.info"></a></li>
-                <li><a href="#/access" class="text-capitalize" data-i18n="nav.access"></a></li>
-                <li><a href="#/accommodation" class="text-capitalize" data-i18n="nav.accommodation"></a></li>
-                <li><a href="#/visit" class="text-capitalize" data-i18n="nav.visit"></a></li>
-                <li><a href="#/map" class="text-capitalize" data-i18n="nav.map"></a></li>
-                <li><a href="#/rsvp" class="text-capitalize" data-i18n="nav.rsvp"></a></li>
+                <li><a href="#/home" class="text-capitalize hidden-xs" data-i18n="nav.home"></a></li>
+                <li><a href="#/home" class="text-capitalize visible-xs" data-toggle="collapse" data-target=".navbar-collapse" data-i18n="nav.home"></a></li>
+
+                <li><a href="#/info" class="text-capitalize hidden-xs" data-i18n="nav.info"></a></li>
+                <li><a href="#/info" class="text-capitalize visible-xs" data-toggle="collapse" data-target=".navbar-collapse" data-i18n="nav.info"></a></li>
+
+                <li><a href="#/access" class="text-capitalize hidden-xs" data-i18n="nav.access"></a></li>
+                <li><a href="#/access" class="text-capitalize visible-xs" data-toggle="collapse" data-target=".navbar-collapse" data-i18n="nav.access"></a></li>
+
+                <li><a href="#/accommodation" class="text-capitalize hidden-xs" data-i18n="nav.accommodation"></a></li>
+                <li><a href="#/accommodation" class="text-capitalize visible-xs" data-toggle="collapse" data-target=".navbar-collapse" data-i18n="nav.accommodation"></a></li>
+
+                <li><a href="#/visit" class="text-capitalize hidden-xs" data-i18n="nav.visit"></a></li>
+                <li><a href="#/visit" class="text-capitalize visible-xs" data-toggle="collapse" data-target=".navbar-collapse" data-i18n="nav.visit"></a></li>
+
+                <li><a href="#/map" class="text-capitalize hidden-xs" data-i18n="nav.map"></a></li>
+                <li><a href="#/map" class="text-capitalize visible-xs" data-toggle="collapse" data-target=".navbar-collapse" data-i18n="nav.map"></a></li>
+
+                <li><a href="#/rsvp" class="text-capitalize hidden-xs" data-i18n="nav.rsvp"></a></li>
+                <li><a href="#/rsvp" class="text-capitalize visible-xs" data-toggle="collapse" data-target=".navbar-collapse" data-i18n="nav.rsvp"></a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right lang-selector">
