--- a/src/partials/visit.html
+++ b/src/partials/visit.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-12 col-sm-6m col-description">
+            <div class="col-xs-12 col-sm-6 col-description">
                 <div class="col-title text-center bold" data-i18n="[html]visit.left.title"></div>
                 <div data-i18n="[html]visit.left.description"></div>
             </div>
