--- a/src/styles/_trip.scss
+++ b/src/styles/_trip.scss
@@ -11,24 +11,20 @@
 
   .dashed-line {
     position: absolute;
-    animation: dash 6s linear forwards;
-  }
 
-  @keyframes dash {
-    to {
-      stroke-dashoffset: 0;
+    stroke-dasharray: 687px;
+    stroke-dashoffset: 687px;
+
+    &.dashed-line-animation {
+      -webkit-animation: dash 3s linear forwards;
+      -moz-animation: dash 3s linear forwards;
+      animation: dash 3s linear forwards;
     }
   }
 
   .modal {
     position: absolute !important;
     opacity: 0.8;
-
-    .modal-header {
-      .modal-title {
-        color: $color-light-blue;
-      }
-    }
 
     .modal-body {
       overflow-y: auto;
@@ -50,5 +46,11 @@
   .modal-backdrop {
     position: absolute !important;
     opacity: 0.2 !important;
+  }
+}
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0;
   }
 }
