--- a/github-prod/css/main.css
+++ b/github-prod/css/main.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=a0136a1e9822ce39b9708fd8a1e70cc9)
- * Config saved to config.json and https://gist.github.com/a0136a1e9822ce39b9708fd8a1e70cc9
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=b8e0d20e036e58d32dd1e262c8f6bc9d)
+ * Config saved to config.json and https://gist.github.com/b8e0d20e036e58d32dd1e262c8f6bc9d
  */
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
@@ -2659,6 +2659,81 @@ fieldset[disabled] .navbar-inverse .btn-link:hover,
 fieldset[disabled] .navbar-inverse .btn-link:focus {
   color: #444444;
 }
+.alert {
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+.alert h4 {
+  margin-top: 0;
+  color: inherit;
+}
+.alert .alert-link {
+  font-weight: bold;
+}
+.alert > p,
+.alert > ul {
+  margin-bottom: 0;
+}
+.alert > p + p {
+  margin-top: 5px;
+}
+.alert-dismissable,
+.alert-dismissible {
+  padding-right: 35px;
+}
+.alert-dismissable .close,
+.alert-dismissible .close {
+  position: relative;
+  top: -2px;
+  right: -21px;
+  color: inherit;
+}
+.alert-success {
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  color: #3c763d;
+}
+.alert-success hr {
+  border-top-color: #c9e2b3;
+}
+.alert-success .alert-link {
+  color: #2b542c;
+}
+.alert-info {
+  background-color: #d9edf7;
+  border-color: #bce8f1;
+  color: #31708f;
+}
+.alert-info hr {
+  border-top-color: #a6e1ec;
+}
+.alert-info .alert-link {
+  color: #245269;
+}
+.alert-warning {
+  background-color: #fcf8e3;
+  border-color: #faebcc;
+  color: #8a6d3b;
+}
+.alert-warning hr {
+  border-top-color: #f7e1b5;
+}
+.alert-warning .alert-link {
+  color: #66512c;
+}
+.alert-danger {
+  background-color: #f2dede;
+  border-color: #ebccd1;
+  color: #a94442;
+}
+.alert-danger hr {
+  border-top-color: #e4b9c0;
+}
+.alert-danger .alert-link {
+  color: #843534;
+}
 .modal-open {
   overflow: hidden;
 }
@@ -3337,6 +3412,17 @@ p {
 #home-footer {
   background-color: rgba(255, 255, 255, 0.85);
   padding-bottom: 50px; }
+
+#alert-ie {
+  display: none;
+  position: fixed;
+  bottom: 10px;
+  left: 0;
+  width: 100%;
+  z-index: 9999; }
+  #alert-ie .alert {
+    margin: auto;
+    width: 90%; }
 
 nav {
   font-family: "Sacramento", cursive, "Helvetica", sans-serif;
