--- a/src/partials/bottom.html
+++ b/src/partials/bottom.html
@@ -1,3 +1,7 @@
+<div id="alert-ie">
+    <div class="alert alert-danger" role="alert" data-i18n="[html]ie"></div>
+</div>
+
 <script src="js/main.min.js"></script>
 
 </body>
